# rubble

demos/nrf52-beacon/: Cargo.toml
demos/nrf52-demo/: Cargo.toml
rubble/: Cargo.toml
rubble-nrf5x/: Cargo.toml
rubble/src/: uuid.rs
rubble/src/link/: ad_structure.rs  advertising.rs  features.rs
